--- a/HTML/style.css
+++ b/HTML/style.css
@@ -24,6 +24,15 @@ h1 {
     text-align: center;
 }
 
+p {
+    margin: 10px;
+}
+
+.game-container {
+    display: flex;
+    padding: 20px;
+}
+
 .grid {
     display: inline-grid;
     position: absolute;
@@ -55,11 +64,24 @@ h1 {
 .button {
     color: white;
     cursor: pointer;
+    text-align: center;
+    display: inline-block;
+    font: bold 24px calibri, sans-serif;
 }
 
-#win-text {
-    opacity: 0;
+.sudoku-bottom-text {
     color: white;
-    font: bold 48px calibri, sans-serif;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 615px;
+    left: 0;
+    right: 0;
+    width: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
+    font: bold 30px calibri, sans-serif;
     transition: opacity 0.25s;
+    /* When change to "you win", set font size to 48 and top to 600 */
 }
